--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt"> 
     <head> 
         <meta charset="UTF-8"/>
-        <link rel="stylesheet" href="/assets/css/B.css"/>
+        <link rel="stylesheet" href="/assets/css/style.css"/>
         <meta id="viewport" name="viewport" content="width=device-width, user-scalable=no"/>
         <title>Login</Title>
     </head>
