--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt"> 
     <head> 
         <meta charset="UTF-8"/>
-        <link rel="stylesheet" href="/assets/css/style.css"/>
+        <link rel="stylesheet" href="assets/css/style.css"/>
         <meta id="viewport" name="viewport" content="width=device-width, user-scalable=no"/>
         <title>Login</Title>
     </head>
@@ -11,7 +11,7 @@
 
     <!-- Parte de Login -->
     <div class="partedelogin"> 
-        <img id="userimg" src="/Assets/img/user.png"/>
+        <img id="userimg" src="assets/img/user.png"/>
         <h1 id="nome">LOGIN</h1>
         
         <!--Formulario de envio-->
@@ -42,9 +42,9 @@
             Faça seu login com:
             <br/>
             <div id="imgs">
-            <a href="google.com.br"><img class="outroslogin" src="Assets/img/facebook.png"></a>
-            <a href="google.com.br"><img class="outroslogin" src="Assets/img/o-email.png"></a>
-            <a href="google.com.br"><img class="outroslogin" src="Assets/img/twitter.png"></a>
+            <a href="google.com.br"><img class="outroslogin" src="assets/img/facebook.png"></a>
+            <a href="google.com.br"><img class="outroslogin" src="assets/img/o-email.png"></a>
+            <a href="google.com.br"><img class="outroslogin" src="assets/img/twitter.png"></a>
             </div>
         </div>
 
